<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">musicdemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="stop">停止</string>
    <string name="play">播放</string>
    <string name="onplay">上一曲</string>
    <string name="downplay">下一曲</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>

</resources>
