<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qf.play.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#249EF6">

        <ImageView
            android:id="@+id/imageOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/cp_mainpage_top_one" />

        <View
            android:id="@+id/lineOne"
            android:layout_width="0.5dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageOne"
            android:background="#C8E7FD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/lineOne"
            android:orientation="horizontal"

            >

            <RadioGroup
                android:id="@+id/mainpageTop_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/radioBtnOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/cp_mainpage_top_two"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="听" />

                <RadioButton
                    android:id="@+id/radioBtnTwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/cp_mainpage_top_three"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="看" />

                <RadioButton
                    android:id="@+id/radioBtnThree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/cp_mainpage_top_four"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="唱" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/cp_mainpage_top_five"></ImageView>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/mainpage_fragment"
        android:layout_width="match_parent"
        android:layout_height="400dp">
    </FrameLayout>
    <ListView
        android:id="@+id/musics"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_weight="1.53" >
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:alpha="156"
            android:id="@+id/upson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onplay"
            />
        <Button
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_pause"
            android:text="@string/play" />
        <Button
            android:layout_alignParentRight="true"
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />
        <Button
            android:id="@+id/nextson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/downplay" />
        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/exit" />
    </LinearLayout>
</LinearLayout>
